--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.7",
     "class-transformer": "^0.5.1",
     "classnames": "^2.5.1",
@@ -35,6 +36,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/axios": "^0.9.36",
+    "@types/node": "^22.13.17",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
