--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "redux": "5.0.1",
     "reflect-metadata": "^0.2.2",
     "simplebar-react": "^3.3.0",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
